--- a/css/card-layout.css
+++ b/css/card-layout.css
@@ -1,3 +1,4 @@
+
 .cards-container {
     position: relative;
     display: block;
@@ -6,10 +7,7 @@
     top: 50px;
     padding-top: 100px;
 }
-.picked-cards-container {
-    display: flex !important;
-    overflow-x: auto !important;
-}
+
 .card {
     display: block;
     width: 200px;
@@ -59,122 +57,14 @@
         transition: transform 0.7s ease-in-out, z-index 0s; /* Remove delay for z-index transition */
     }
 
-/* Fan out animations */
-@keyframes card1_ani {
-
-
+/* Fan out animation */
+@keyframes card_ani {
     100% {
-        transform: rotate(-45deg);
+        transform: rotate(var(--rotate)); /* Use the CSS variable for the rotation angle */
     }
 }
 
-@keyframes card2_ani {
- 
-
-    100% {
-        transform: rotate(-36deg);
-    }
-}
-
-@keyframes card3_ani {
-
-    100% {
-        transform: rotate(-27deg);
-    }
-}
-
-@keyframes card4_ani {
-
-
-    100% {
-        transform: rotate(-18deg);
-    }
-}
-
-@keyframes card5_ani {
-
-
-    100% {
-        transform: rotate(-9deg);
-    }
-}
-
-@keyframes card6_ani {
-
-    100% {
-        transform: rotate(9deg);
-    }
-}
-
-@keyframes card7_ani {
-
-
-    100% {
-        transform: rotate(18deg);
-    }
-}
-
-@keyframes card8_ani {
-
-
-    100% {
-        transform: rotate(27deg);
-    }
-}
-
-@keyframes card9_ani {
-   
-
-    100% {
-        transform: rotate(36deg);
-    }
-}
-
-@keyframes card10_ani {
-
-
-    100% {
-        transform: rotate(45deg);
-    }
-}
-
-/* Assign animations to cards */
-.card:nth-child(1) {
-    animation-name: card1_ani;
-}
-
-.card:nth-child(2) {
-    animation-name: card2_ani;
-}
-
-.card:nth-child(3) {
-    animation-name: card3_ani;
-}
-
-.card:nth-child(4) {
-    animation-name: card4_ani;
-}
-
-.card:nth-child(5) {
-    animation-name: card5_ani;
-}
-
-.card:nth-child(6) {
-    animation-name: card6_ani;
-}
-
-.card:nth-child(7) {
-    animation-name: card7_ani;
-}
-
-.card:nth-child(8) {
-    animation-name: card8_ani;
-}
-
-.card:nth-child(9) {
-    animation-name: card9_ani;
-}
-
-.card:nth-child(10) {
-    animation-name: card10_ani;
+/* Assign the animation to all cards */
+.card {
+    animation-name: card_ani;
 }
